--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </figcaption>
             </figure>
         </div>
-        <div class="line-1">
+        <div class="line line-odd">
             <span class="before-circle"></span>
-            <span class="border-1"></span>
+            <span class="border"></span>
             <span class="after-circle"></span>
         </div>
 
@@ -41,9 +41,9 @@
                 </figcaption>
             </figure>
         </div>
-        <div class="line-2">
+        <div class="line line-odd">
             <span class="before-circle"></span>
-            <span class="border-2"></span>
+            <span class="border"></span>
             <span class="after-circle"></span>
         </div>
         <div class="route-section">
@@ -57,9 +57,9 @@
                 </figcaption>
             </figure>
         </div>
-        <div class="line-3">
+        <div class="line line-odd">
             <span class="before-circle"></span>
-            <span class="border-3"></span>
+            <span class="border"></span>
             <span class="after-circle"></span>
         </div>
 
@@ -67,7 +67,6 @@
 
     <div class="main-line">
         <span class="after-circle"></span>
-        <span class="border"></span>
     </div>
     <div class="second-section">
         <div class="pick-section">
@@ -81,9 +80,9 @@
                 </figcaption>
             </figure>
         </div>
-        <div class="line-4">
+        <div class="line line-even">
             <span class="after-circle"></span>
-            <span class="border-4"></span>
+            <span class="border"></span>
             <span class="before-circle"></span>
         </div>
 
@@ -98,9 +97,9 @@
                 </figcaption>
             </figure>
         </div>
-        <div class="line-5">
+        <div class="line line-even">
             <span class="after-circle"></span>
-            <span class="border-5"></span>
+            <span class="border"></span>
             <span class="before-circle"></span>
         </div>
     </div>
