--- a/index.html
+++ b/index.html
@@ -4,106 +4,114 @@
     <meta charset="UTF-8">
     <title>List</title>
     <link rel="stylesheet" href="style.css">
+
+    <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@200;300;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 class="heading">
-    How it works?
-</h1>
-<div class="list-container">
-    <div class="first-section">
+<main>
+    <h1 class="heading">
+        How it works?
+    </h1>
+    <div class="list-container">
+        <div class="first-section">
+            <div class="download-section">
+                <figure>
+                    <img alt="download" src="assets/images/cloud-computing.png" class="image-sizes">
+                    <figcaption>
+                        <h2>
+                            DOWNLOAD
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </figcaption>
+                </figure>
+            </div>
 
-        <div class="download-section">
-            <figure>
-                <img alt="download" src="assets/images/cloud-computing.png" class="image-sizes">
-                <figcaption>
-                    <h2>
-                        DOWNLOAD
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                </figcaption>
-            </figure>
+            <div class="line line-odd">
+                <span class="before-circle"></span>
+                <span class="border"></span>
+                <span class="after-circle"></span>
+            </div>
+
+            <div class="sneakers-section">
+                <figure>
+                    <img alt="sneakers" src="assets/images/sneakers.png" class="image-sizes">
+                    <figcaption>
+                        <h2>
+                            PICK SNEAKERS
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="line line-odd">
+                <span class="before-circle"></span>
+                <span class="border"></span>
+                <span class="after-circle"></span>
+            </div>
+
+            <div class="route-section">
+                <figure>
+                    <img alt="route" src="assets/images/route.png" class="image-sizes">
+                    <figcaption>
+                        <h2>
+                            START AND COP
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="line line-odd">
+                <span class="before-circle"></span>
+                <span class="border"></span>
+                <span class="after-circle"></span>
+            </div>
         </div>
-        <div class="line line-odd">
-            <span class="before-circle"></span>
-            <span class="border"></span>
+
+        <div class="main-line">
             <span class="after-circle"></span>
         </div>
 
-        <div class="sneakers-section">
-            <figure>
-                <img alt="sneakers" src="assets/images/sneakers.png" class="image-sizes">
-                <figcaption>
-                    <h2>
-                        PICK SNEAKERS
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                </figcaption>
-            </figure>
-        </div>
-        <div class="line line-odd">
-            <span class="before-circle"></span>
-            <span class="border"></span>
-            <span class="after-circle"></span>
-        </div>
-        <div class="route-section">
-            <figure>
-                <img alt="route" src="assets/images/route.png" class="image-sizes">
-                <figcaption>
-                    <h2>
-                        START AND COP
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                </figcaption>
-            </figure>
-        </div>
-        <div class="line line-odd">
-            <span class="before-circle"></span>
-            <span class="border"></span>
-            <span class="after-circle"></span>
-        </div>
+        <div class="second-section">
+            <div class="pick-section">
+                <figure>
+                    <img alt="picker" src="assets/images/tack-save-button.png" class="image-sizes">
+                    <figcaption>
+                        <h2>
+                            PICK COP SITE
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </figcaption>
+                </figure>
+            </div>
 
+            <div class="line line-even">
+                <span class="after-circle"></span>
+                <span class="border"></span>
+                <span class="before-circle"></span>
+            </div>
+
+            <div class="bot-section">
+                <figure>
+                    <img alt="bot" src="assets/images/customer-support.png" class="image-sizes">
+                    <figcaption>
+                        <h2>
+                            SET UP BOT
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="line line-even">
+                <span class="after-circle"></span>
+                <span class="border"></span>
+                <span class="before-circle"></span>
+            </div>
+        </div>
     </div>
-
-    <div class="main-line">
-        <span class="after-circle"></span>
-    </div>
-    <div class="second-section">
-        <div class="pick-section">
-            <figure>
-                <img alt="picker" src="assets/images/tack-save-button.png" class="image-sizes">
-                <figcaption>
-                    <h2>
-                        PICK COP SITE
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                </figcaption>
-            </figure>
-        </div>
-        <div class="line line-even">
-            <span class="after-circle"></span>
-            <span class="border"></span>
-            <span class="before-circle"></span>
-        </div>
-
-        <div class="bot-section">
-            <figure>
-                <img alt="bot" src="assets/images/customer-support.png" class="image-sizes">
-                <figcaption>
-                    <h2>
-                        SET UP BOT
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                </figcaption>
-            </figure>
-        </div>
-        <div class="line line-even">
-            <span class="after-circle"></span>
-            <span class="border"></span>
-            <span class="before-circle"></span>
-        </div>
-    </div>
-
-</div>
+</main>
 </body>
 </html>
